--- a/views/reply/reply.html
+++ b/views/reply/reply.html
@@ -62,7 +62,7 @@
           <div class='sep10'></div>
           <button class='btn reply2_submit_btn' type="submit" data-id='<%= reply._id %>'>回复</button>
           <span class='sp10'></span>
-          <span class='col_fade'>Ctrl+Enter 快捷回复</span>
+          <span class='col_fade'>按 Ctrl+Enter 快捷回复</span>
         </form>
       </div>
       <% } %>
