--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -61,7 +61,7 @@ body, p {
     font-weight: bold;
 }
 #footer {
-  height: 200px;
+  height: 20px;
   clear: both;
   background: hsla(0, 100%, 100%, 1);
   position: relative;
@@ -69,7 +69,7 @@ body, p {
   margin-top: 8px;
 }
 #footer_main {
-  width: 1040px;
+  width: 1060px;
   margin: 0px auto;
   color: #e2e2e2;
   padding: 20px 0px;
@@ -598,7 +598,7 @@ textarea[id^=wmd-input] {
   margin: 4px auto;
 }
 .navbar .brand {
-  padding: 7px 0px 0px 20px;
+  padding: 11px 0px 0px 20px;
   width: 143px;
 }
 .navbar .navbar-search {
@@ -744,7 +744,7 @@ div[class$=part] {
 .reply_part {
   width: 300px;
 }
-.topic_content{
+.topic_content{padding: 10px;
 }
 textarea, input[type="text"], input[type="password"], input[type="datetime"],
 input[type="datetime-local"], input[type="date"], input[type="month"],
