--- a/views/sidebar.html
+++ b/views/sidebar.html
@@ -9,7 +9,7 @@
       </div>
       <% } else { %>
       <div class='inner'>
-        <p><%= config.description %></p>
+        <p><%= config.nameseo %></p>
         <div class='sep10'></div>
         <div class='cen'>
           <a href='/signup'><button class='btn'>现在注册</button></a>
@@ -23,14 +23,10 @@
   <div class='sep10'></div>
   <div class=panel>
     <div class='header'>
-      <!-- <img src='<%- config.site_static_host %>/images/tag_icon&16.png' title='标签'/> -->
-      <!-- CNode社区宣传通告 -->
-      <span class="index_notify">社区消息
+      <span class="index_notify">社区公告
     </div>
     <div class='inner'>
-      <div><a href="/topic/4fa69d90bac222c3780576d8" target="_blank">如何获得NodeAppEngine邀请码?</a></div>
-      <div><a href="/topic/4f4d9f007f999acb7c00af57" target="_blank">如何获得Node官方T-Shirt?</a> </div>
-      <div><a href="/topic/4f17948d9f40a8335200518e" target="_blank">如何加入CNode社区?</a></div>
+      <div><a href="/topic/51a2d93fcd081475300017a0" target="_blank">PNG 破内购-欢迎各位爱好者加入!</a></div>
     </div>
   </div>
 
