--- a/views/static/about.html
+++ b/views/static/about.html
@@ -12,8 +12,8 @@
 			<div class='topic_content'>
 				<h3>关于</h3>
 				<p></p>
-				<p>CNodeJS.ORG 为国内最专业的 Node.JS 开源技术社区，致力于 Node.JS 的技术研究。</p>
-				<p>CNode 社区由一批热爱 Node 技术的工程师发起，目前已经吸引了互联网各个公司的专业技术人员加入，我们非常欢迎更多对 Node 感兴趣的朋友加入我们（发邮件到 <a href='mailto:nodejs@126.com'>nodejs@126.com</a>）。</p>
+				<p>PNG破内购 是国内移动端APP内购破解技术社区，致力于 内购破解 的技术研究。</p>
+				<p>PoNeiGou 社区由一批热爱 内购破解 技术的爱好者发起，我们非常欢迎更多对 内购破解 感兴趣的朋友加入我们 <a target="_blank" href="http://mail.163.com/share/mail2me.htm#email=112111110101105103111117064049050054046099111109" style="text-decoration:none;"><img src="http://mimg.127.net/xm/all/share/120111/img/mailme_1.png" alt="给我写信"/></a>。</p>
 			</div>
 		</div>
 	</div>	
